--- a/css/metro.css
+++ b/css/metro.css
@@ -114,7 +114,7 @@ nav {
       width: 100%;
       text-align: center;
       font-size: 25px;
-      margin-top: 50px;
+      margin-top: 30px;
       margin-bottom: 50px;
   }
   .head h2{
@@ -141,7 +141,8 @@ nav {
   }
   
   .sub-first-section{
-    padding-right: 20px;
+    width: 30%;
+    padding-right: 10px;
     padding-left: 20px;
 }
 .sub-first-section img{
@@ -154,7 +155,7 @@ nav {
   background-color: rgb(133, 158, 158);
 }
 .span1-div1-p{
- font-size: 30px;
+ font-size: 25px;
   width: 91%;
   text-align: center;
 }
@@ -165,10 +166,12 @@ nav {
   background-color: rgb(133, 158, 158);
 }
 .sub-second-section{   
-    padding-left: 25px;
+    margin-left: 10px;
+    padding-left: 10px;
     border-left: 1px solid rgb(188, 207, 207);
-    padding-right: 25px;
-    border-right: none;
+    padding-right: 10px;
+    border-right: 1px solid rgb(188, 207, 207);
+    width: 40%;
 }
 .sub-second-section img{
   width: 100%;
@@ -194,11 +197,11 @@ width: 100%;
     display: none;
   }
   .sub-third-section{
-      padding-left: 25px;
-      width: 100%;
+      padding-left: 10px;
+      width: 30%;
   }
   .span3-all{
-  margin-bottom: 25px;
+  margin-bottom: 20px;
   }
   .span3-div4{
       padding-bottom: 10px;
@@ -214,7 +217,7 @@ width: 100%;
     background-color: rgb(133, 158, 158);
   }
   .span3-div4{
-    font-weight: bold;
+    
     font-size: 20px;
   }
   .span3-div4 :hover{
@@ -241,20 +244,20 @@ width: 100%;
   display: flex;
   justify-content: space-between;
   padding-top: 2rem;
-  gap: 10px;
-  margin-left: 20px;
-  margin-right: 20px;
+  gap: 40px;
+  margin-left: 7px;
+  margin-right: 7px;
   }
   .section2-wrapper-content{
     display: flex;
     justify-content: space-between;
     padding-bottom: 50px;
-    gap: 10px;
-    margin-right: 20px;
-    margin-left: 20px;
+    gap: 40px;
+    margin-left: 7px;
+    margin-right: 7px;
   }
   .sub-sec-p{
-    font-size: 17px;
+    font-size: 15px;
     width: 98%;
     text-align: center;
   }
@@ -281,20 +284,20 @@ width: 100%;
   display: flex;
   justify-content: space-between;
   padding-top: 2rem;
-  gap: 10px;
-  margin-left: 20px;
-  margin-right: 20px;
+  gap: 40px;
+  margin-left: 7px;
+  margin-right: 7px;
   }
   .third-section2-wrapper-content{
     display: flex;
     justify-content: space-between;
     padding-bottom: 50px;
-    gap: 10px;
-  margin-left: 20px;
-  margin-right: 20px;
+    gap: 40px;
+    margin-left: 7px;
+    margin-right: 7px;
   }
   .third-sub-sec-p{
-    font-size: 20px;
+    font-size: 15px;
     width: 100%;
     text-align: start;
   }
@@ -369,7 +372,7 @@ width: 100%;
   }
   .advert-div p img{
   margin-left: 40px;
-    width: 100%;
+    width: 80%;
     height: 400px;
   }
   .side-ad{
@@ -420,7 +423,7 @@ width: 100%;
       width: 100%;
       text-align: center;
       font-size: 25px;
-      margin-top: 50px;
+      margin-top: 30px;
       margin-bottom: 50px;
     }
     .head h2{
@@ -457,7 +460,7 @@ width: 100%;
     background-color: rgb(133, 158, 158);
   }
    .span1-div1-p{
-    font-size: 30px;
+    font-size: 25px;
      width: 91%;
      text-align: center;
    }
@@ -500,15 +503,15 @@ width: 100%;
      padding-left: 20px;
     }
     .span3-all{
-      margin-bottom: 25px;
+      margin-bottom: 20px;
       }
       .span3-div4{
-          padding-bottom: 10px;
+          padding-bottom: 7px;
       }
       .span3-name{
         font-style: italic;
-        font-size: 20px; 
-        margin-top: 15px;
+        font-size: 15px; 
+        margin-top: 10px;
       }
       .span3-name :hover{
         transition: 1s;
@@ -517,11 +520,11 @@ width: 100%;
         background-color: rgb(133, 158, 158);
       }
       #span3-name{
-        padding-bottom: 20px;
+        padding-bottom: 10px;
       }
       .span3-div4{
-        font-weight: bold;
-        font-size: 35px;
+       font-size: 20px;
+       font-weight: bold;
       }
       .span3-div4 :hover{
         transition: 1s;
@@ -545,20 +548,20 @@ width: 100%;
   display: flex;
   justify-content: space-between;
   padding-top: 2rem;
-  gap: 10px;
-  margin-left: 20px;
-  margin-right: 20px;
+  gap: 40px;
+  margin-left: 7px;
+  margin-right: 7px;
   }
   .section2-wrapper-content{
     display: flex;
     justify-content: space-between;
     padding-bottom: 50px;
-    gap: 10px;
-    margin-right: 20px;
-    margin-left: 20px;
+    gap: 40px;
+    margin-right: 7px;
+    margin-left: 7px;
   }
   .sub-sec-p{
-    font-size: 17px;
+    font-size: 15px;
     width: 98%;
     text-align: center;
   }
@@ -585,20 +588,20 @@ width: 100%;
   display: flex;
   justify-content: space-between;
   padding-top: 2rem;
-  gap: 10px;
-  margin-left: 20px;
-  margin-right: 20px;
+  gap: 40px;
+  margin-left: 7px;
+  margin-right: 7px;
   }
   .third-section2-wrapper-content{
     display: flex;
     justify-content: space-between;
     padding-bottom: 50px;
-    gap: 10px;
-  margin-left: 20px;
-  margin-right: 20px;
+    gap: 40px;
+  margin-left: 7px;
+  margin-right: 7px;
   }
   .third-sub-sec-p{
-    font-size: 20px;
+    font-size: 15px;
     width: 100%;
     text-align: start;
   }
@@ -681,7 +684,7 @@ width: 100%;
     
   margin-left: 20px;
   margin-right: 10px;
-    width: 90%;
+    width: 70%;
     height: 400px;
   }
   .side-ad{
@@ -724,7 +727,7 @@ width: 100%;
     width: 100%;
     text-align: center;
     font-size: 25px;
-    margin-top: 50px;
+    margin-top: 30px;
     margin-bottom: 50px;
   }
   .head h2{
@@ -764,7 +767,7 @@ width: 100%;
        padding: 0;
        padding-left: 20px;
        padding-right: 25px;
-       width: 50%;
+       width: 40%;
    }
    .sub-first-section img{
      width: 98%;
@@ -791,7 +794,7 @@ width: 100%;
        border-left: 1px solid rgb(188, 207, 207);
        padding-right: 25px;
        border-right: none;
-       width: 50%;
+       width: 60%;
    }
    .sub-second-section img{
      width: 98%;
@@ -828,7 +831,7 @@ width: 100%;
    }
    .span3-name{
      font-style: italic; 
-     margin-top: 15px;
+     margin-top: 10px;
    }
    .span3-name :hover{
     transition: 1s;
@@ -837,7 +840,7 @@ width: 100%;
     background-color: rgb(133, 158, 158);
    }
    #span3-name{
-     padding-bottom: 20px;
+     padding-bottom: 15px;
    }
    #span3-name :hover{
     transition: 1s;
@@ -875,9 +878,8 @@ width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  gap: 20px;
-  padding-top: 2rem;
-  padding-left: 15px;
+  gap: 25px;
+  padding-top: 2rem;  
   padding-right: 0;
   margin-right: 20px;
   }
@@ -887,11 +889,11 @@ width: 100%;
     justify-content: space-evenly;
     padding-top: 2rem;
      padding-bottom: 15px;
-     gap: 20px;
+     gap: 25px;
      margin-left: 20px;
   }
   .sub-sec-p{
-    font-size: 18px;
+    font-size: 13px;
     font-weight: bold;
      width: 98%;
     text-align: center;
@@ -920,8 +922,7 @@ width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  gap: 15px;
-  margin-left: 15px;
+  gap: 25px;
   padding-top: 2rem;
   margin-right: 20px;
 
@@ -930,13 +931,13 @@ width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    gap: 15px;
+    gap: 25px;
     padding-bottom: 15px;
     padding-top: 2rem;
     margin-left: 20px;
   }
   .third-sub-sec-p{
-    font-size: 18px;
+    font-size: 13px;
     font-weight: bold;
     width: 98%;
     text-align: center;
@@ -1038,7 +1039,7 @@ width: 100%;
     width: 100%;
     text-align: center;
     font-size: 25px;
-    margin-top: 50px;
+    margin-top: 30px;
     margin-bottom: 50px;
   }
   .head h2{
@@ -1083,8 +1084,8 @@ width: 100%;
     }
   
     .sub-first-section{
-      padding-left: 25px;
-      padding-right: 25px;
+      padding-left: 15px;
+      padding-right: 15px;
     }
     .all-image{
       width: 100%;
@@ -1096,7 +1097,7 @@ width: 100%;
       background-color: rgb(133, 158, 158);
     }
     .span1-div1-p{
-      font-weight: bold;
+      font-size: 15px;
     }
     .span1-div1-p :hover{
       transition: 1s;
@@ -1106,13 +1107,13 @@ width: 100%;
     }
     .sub-second-section{   
       border: none;
-      padding: 0 25px 0 25px;
+      padding: 0 15px 0 15px;
     }
     #sub-second-section-img{
-      height: 360px;
+      height: 300px;
     }
     .span2-div-p{
-    font-size: 25px;
+    font-size: 20px;
     }
     .span2-div-p :hover{
       transition: 1s;
@@ -1125,22 +1126,22 @@ width: 100%;
     }
      .sub-third-section{
         padding-left: none;
-        padding: 0 25px 0 25px;
+        padding: 0 10px 0 10px;
     }
     #span3-all-top-border{
       border-top: 2px solid;
-      padding-top: 15px;
+      padding-top: 10px;
   
     }
     .span3-all{
-    margin-bottom: 25px;
+    margin-bottom: 15px;
     }
     .span3-div4{
-        padding-bottom: 10px;
+        padding-bottom: 5px;
     }
     .span3-name{
       font-style: italic; 
-      margin-top: 15px;
+      margin-top: 10px;
     }
     .span3-name :hover{
       transition: 1s;
@@ -1172,7 +1173,7 @@ width: 100%;
     /*2nd section*/
   
     .section-wrapper{
-      padding: 0 25px 0 25px;
+      padding: 0 15px 0 15px;
     }
     .sub-sec-p{
       text-align: center;
@@ -1184,7 +1185,7 @@ width: 100%;
       background-color: rgb(133, 158, 158);
     }
     .sub-sec-div img{
-        height: 200px;
+        height: 150px;
         width: 100%;
     }
     .sub-sec-div img :hover{
@@ -1211,7 +1212,7 @@ width: 100%;
     
     /*third section & fourth section*/
     .third-section-wrapper{
-      padding: 0 25px 0 25px;
+      padding: 0 15px 0 15px;
     }
     .third-sub-sec-p{
       text-align: center;
@@ -1223,7 +1224,7 @@ width: 100%;
       background-color: rgb(133, 158, 158);
     }
     .title-wrapper img{
-        height: 200px;
+        height: 150px;
         width: 100%;
     }
     .title-wrapper img :hover{
